User Page(dynamic) succesful try

--- a/templates/user.html
+++ b/templates/user.html
@@ -10,8 +10,8 @@
 	<div class="container" id="head">
 		<div class="jumbotron">
 				<div class="container" id="head">
-					<h1>Name here</h1>
-					<h4 style="text-align: left;">LoginId:123</h4>
+					<h1>{{ name }}</h1>
+					<h4 style="text-align: left;">LoginId:{{LoginID}}</h4>
 				</div>
 			
 		</div>
