--- a/templates/user.html
+++ b/templates/user.html
@@ -8,6 +8,21 @@
 </head>
 <body>
 	<div class="container" id="head">
+		<div class="pos-f-t">
+		  <div class="collapse" id="navbarToggleExternalContent">
+		    <div class="bg-dark p-4">
+		      <button type="button" class="btn btn-secondary btn-lg btn-block">Make Payment</button>
+		      <button type="button" class="btn btn-secondary btn-lg btn-block">Edit Profile</button>
+		      <button type="button" class="btn btn-secondary btn-lg btn-block">Log Out</button>
+		    </div>
+		  </div>
+		  <nav class="navbar navbar-dark bg-dark">
+		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+		      <span class="navbar-toggler-icon"></span>
+		    </button>
+		    <h3 align="right" style="color:white;">Average Time Spent: {{hours}} hrs/day</h3>
+		  </nav>
+		</div>
 		<div class="jumbotron">
 				<div class="container" id="head">
 					<h1>{{ name }}</h1>
@@ -71,6 +86,8 @@
 		  </a>
 		</div>
 	</div>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 	
 </body>
 </html>
