--- a/templates/movie.html
+++ b/templates/movie.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Movie Name</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
 	<div class="container" id="head">
@@ -20,7 +20,7 @@
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		    </button>
-		    <h3 align="right" style="color:white;">Average Time Spent: {{hours}} hrs/day</h3>
+		    <h3 align="right" style="color:white;">Time Spent: {{hours}} hrs</h3>
 		  </nav>
 		</div>
 		<div class="jumbotron jumbotron-fluid">
@@ -43,11 +43,40 @@
 			</div>
 			</div>
 		</div>
+		<h1>Actors:</h1>
+		<div class="list-group list-group-horizontal">
+			<!-- Do this in for loop -->
+		  <a href="#" class="list-group-item list-group-item-action">
+		    <div class="card">
+		      <img src="{{ url_for('static', filename='images/actor.jpg') }}" class="card-img-top" alt="...">
+		      <div class="card-body">
+		        <h5 class="card-title" align="center">Artist Name</h5>
+		      </div>
+		    </div>
+		  </a>
+		  </a>
+		  <a href="#" class="list-group-item list-group-item-action">
+		    <div class="card">
+		      <img src="{{ url_for('static', filename='images/actor.jpg') }}" class="card-img-top" alt="...">
+		      <div class="card-body">
+		        <h5 class="card-title" align="center">Artist Name</h5>
+		      </div>
+		    </div>
+		  </a>
+		  <a href="#" class="list-group-item list-group-item-action">
+		      <div class="card">
+		        <img src="{{ url_for('static', filename='images/actor.jpg') }}" class="card-img-top" alt="...">
+		        <div class="card-body">
+		          <h5 class="card-title" align="center">Artist Name</h5>
+		        </div>
+		      </div>
+		    </a>
+		  </a>
+		</div>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-
-	
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 </body>
 </html>
