--- a/templates/main.html
+++ b/templates/main.html
@@ -216,11 +216,16 @@ body {
       <label for="uname"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="uname" required>
 
+      <label for="age"><b>Age</b></label>
+      <input type="text" placeholder="Enter Age" name="age" required>
+
+
+
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
 
       <label for="designation"><b>Sign up As</b></label>
-      <input type="text" placeholder="e.g User/Artists" name="designation" required>
+      <input type="text" placeholder="e.g User/Artist/Production" name="designation" required>
          
      
 
