--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Production House Name</title>
+	<title>{{ name }}</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet"> -->
@@ -26,7 +26,7 @@
 		</div>
 		<div class="jumbotron">
 				<div class="container" id="head">
-					<h1 align="center">Production House Name</h1>
+					<h1 align="center">{{name}}</h1>
 				</div>
 			
 		</div>
@@ -73,15 +73,20 @@
 
 			</div>
 			<div class="col-6">
-				<ul class="list-group">
-				  <li class="list-group-item active">Upcoming Movies</li>
-				  <li class="list-group-item">Dapibus ac facilisis in</li>
-				  <li class="list-group-item">Morbi leo risus</li>
-				  <li class="list-group-item">Porta ac consectetur ac</li>
-				  <li class="list-group-item">Vestibulum at eros</li>
-				</ul>
+				<div class="list-group">
+				  <a href="#" class="list-group-item list-group-item-action active">Movies</a>
+				  {{ Movies_embed }}
+				  <!-- <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a> -->
+				</div>
 			</div>
 		</div>
+		<ul class="list-group">
+		  <li class="list-group-item active"> Upcoming Movies</li>
+		  <li class="list-group-item">Dapibus ac facilisis in</li>
+		  <li class="list-group-item">Morbi leo risus</li>
+		  <li class="list-group-item">Porta ac consectetur ac</li>
+		  <li class="list-group-item">Vestibulum at eros</li>
+		</ul>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
