--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -30,7 +30,7 @@
 				</div>
 			
 		</div>
-<!-- 		<div class="row">
+		<div class="row">
 			<div class="col-6">
 				<div id="chart">
 				   <embed type="image/svg+xml" src= {{ chart1|safe }} />
@@ -41,7 +41,7 @@
 				   <embed type="image/svg+xml" src= {{ chart2|safe }} />
 				</div>
 			</div>
-		</div> -->
+		</div>
 		<div class="row">
 			<div class="col-6">
 				<table class="table table-striped">
@@ -52,22 +52,7 @@
 				    </tr>
 				  </thead>
 				  <tbody>
-				  	<tr>
-			  	      <td>Genre1</td>
-			  	      <td>8.2</td>
-				  	</tr>
-				  	<tr>
-			  	      <td>Genre1</td>
-			  	      <td>8.2</td>
-				  	</tr>
-				  	<tr>
-			  	      <td>Genre1</td>
-			  	      <td>8.2</td>
-				  	</tr>
-				  	<tr>
-			  	      <td>Genre1</td>
-			  	      <td>8.2</td>
-				  	</tr>
+				  	{{ genreVSrating | safe }}
 				  </tbody>
 				</table>
 
@@ -75,18 +60,30 @@
 			<div class="col-6">
 				<div class="list-group">
 				  <a href="#" class="list-group-item list-group-item-action active">Movies</a>
-				  {{ Movies_embed }}
+				  {{ Movies_embed | safe }}
 				  <!-- <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a> -->
 				</div>
 			</div>
 		</div>
-		<ul class="list-group">
-		  <li class="list-group-item active"> Upcoming Movies</li>
-		  <li class="list-group-item">Dapibus ac facilisis in</li>
-		  <li class="list-group-item">Morbi leo risus</li>
-		  <li class="list-group-item">Porta ac consectetur ac</li>
-		  <li class="list-group-item">Vestibulum at eros</li>
-		</ul>
+		<table class="table">
+		  <thead class="thead-dark">
+		    <tr>
+		      <th scope="col">Name</th>
+		      <th scope="col">Release Date</th>
+		      <th scope="col">Genre</th>
+		      <th scope="col">Duration</th>
+		    </tr>
+		  </thead>
+		  <tbody>
+		    <!-- <tr>
+		      <th scope="row">1</th>
+		      <td>Mark</td>
+		      <td>Otto</td>
+		      <td>@mdo</td>
+		    </tr> -->
+		    {{ Upcoming_Movies_embed | safe }}
+		  </tbody>
+		</table>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
