--- a/templates/user.html
+++ b/templates/user.html
@@ -8,13 +8,29 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+	<div class="modal fade" id="paymentPopup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <form method="POST" class="modal-content animate" action="" >
+			<button type="submit" name="payment" value="user" onclick="closeForm()">User</button>   
+	      	<button type="submit" name="payment" value="family" onclick="closeForm()">Family</button>
+		  </form>
+	    </div>
+	  </div>
+	</div>
+<!-- 	<div id="paymentPopup" class="modal">
+		<form method="POST" class="modal-content animate" action="" >
+			<button type="submit" name="payment" value="user" onclick="closeForm()">User</button>   
+	      	<button type="submit" name="payment" value="family" onclick="closeForm()">Family</button>
+		</form>
+	</div> -->
 	<div class="container" id="head">
 		<div class="pos-f-t">
 		  <div class="collapse" id="navbarToggleExternalContent">
 		    <div class="bg-dark p-4">
-		      <button type="button" class="btn btn-secondary btn-lg btn-block">Make Payment</button>
-		      <button type="button" class="btn btn-secondary btn-lg btn-block">Edit Profile</button>
-		      <button type="button" class="btn btn-secondary btn-lg btn-block">Log Out</button>
+		      <button type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#paymentPopup">Make Payment</button>
+		      <p></p>
+		      <a href="/"><button type="button" name="logout_button" class="btn btn-secondary btn-lg btn-block">Log Out</button></a>
 		    </div>
 		  </div>
 		  <nav class="navbar navbar-dark bg-dark">
@@ -45,14 +61,21 @@
 			</div>
 		</div> -->
 		<div class="input-group mb-3">
-	  		<div class="input-group-prepend">
-	    		<span class="input-group-text">Search for a movie:</span>
+	  		<div class="input-group-prepend">	  			
+	    		<span class="input-group-text" id="basic-addon1">Search for a movie:</span>
+	    		
 	  		</div>
-	  		<input type="text" class="form-control" aria-label="SearchMovieName">
-	  		<div class="input-group-append">
-	    		<button class="btn btn-outline-secondary" type="button" id="button-addon2">Go</button>
-	  		</div>
+	  		<form method="POST" action="">
+	  		<input type="text" name="search_movie" class="form-control" aria-label="SearchMovieName" aria-describedby="basic-addon1">
+	  		<!-- <div class="input-group-append">
+	    		<button class="btn btn-outline-secondary" type="button" value="search" id="button-addon2">Go</button>
+	  		</div> -->
+	  		</form>
 		</div>
+		<div class="btn-group-vertical">
+			{{ search_movie_result_embed | safe }}
+		</div>
+		
 
 
 		<div class="list-group list-group-horizontal">
@@ -87,6 +110,15 @@
 		  </a>
 		</div>
 	</div>
+	<script>
+		function openForm() {
+		  document.getElementById("paymentPopup").style.display = "block";
+		}
+
+		function closeForm() {
+		  document.getElementById("paymentPopup").style.display = "none";
+		}
+	</script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
