Some changes in readme done

--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -13,8 +13,7 @@
 		  <div class="collapse" id="navbarToggleExternalContent">
 		    <div class="bg-dark p-4">
 		      <button type="button" class="btn btn-secondary btn-lg btn-block">Upload Movie</button>
-		      <button type="button" class="btn btn-secondary btn-lg btn-block">Edit Profile</button>
-		      <button type="button" class="btn btn-secondary btn-lg btn-block">Log Out</button>
+		      <a href="/"><button type="button" class="btn btn-secondary btn-lg btn-block">Log Out</button></a>
 		    </div>
 		  </div>
 		  <nav class="navbar navbar-dark bg-dark">
