--- a/templates/user.html
+++ b/templates/user.html
@@ -138,9 +138,9 @@
     <div class="container">
    
     	<H1>Payment as</H1>
-      <a href="/your_flask_funtion1">  <button type="submit" name="user" value="Send">User   </button></a>
+    <button type="submit" name="user" value="Send">User   </button>
 
-        <a href="/your_flask_funtion2"> <button type="submit" name="family" value="Send">Family</button>  </a>
+       <button type="submit" name="family" value="Send">Family</button>  
         </div>
 
       
