--- a/templates/movie.html
+++ b/templates/movie.html
@@ -126,7 +126,7 @@
     <div class="container">
     	<h1></h1>
     	<h4>You Have Watched The Movie!</h4>
-      <label for="uname"><b>Please Rate the moive (1-10)</b></label>
+      <label for="uname"><b>Please Rate the movie (1-10)</b></label>
       <input type="text" placeholder="Enter The rating" name="rating" required>
 
      
