--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -6,13 +6,152 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet"> -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<style>
+		 #UploadPopup input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+#UploadPopup button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+#UploadPopup button:hover {
+  opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+#UploadPopup .cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+#UploadPopup .imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+#UploadPopup img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+#UploadPopup .container {
+  padding: 16px;
+}
+
+#UploadPopup span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+ .modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+#UploadPopup .modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 40%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+#UploadPopup .close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+#UploadPopup .close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+/* Add Zoom Animation */
+#UploadPopup .animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+#UploadPopup @-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+#UploadPopup @keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+
+	</style>
 </head>
 <body>
+<div id="UploadPopup" class="modal">
+  
+  <form method="POST" class="modal-content animate" action="/upload/" >
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('UploadPopup').style.display='none'" class="close" title="Close Modal">&times;</span>
+     
+    </div>
+
+    <div class="container">
+      <label for="name"><b>Movie name</b></label>
+      <input type="text" placeholder="Enter the movie name" name="name" required>
+
+      <label for="duration"><b>Duration</b></label>
+      <input type="text" placeholder="Enter the duration" name="duration" required>
+
+
+
+      <label for="genre"><b>Genre</b></label>
+      <input type="text" placeholder="Enter the Genre" name="genre" required>
+
+         
+     
+
+      <button type="submit" name="upload" value="Send" onclick="closeForm()">Upload
+      </button>
+        </div>
+
+      
+    </form>
+  </div>
 	<div class="container" id="head">
 		<div class="pos-f-t">
 		  <div class="collapse" id="navbarToggleExternalContent">
 		    <div class="bg-dark p-4">
-		      <button type="button" class="btn btn-secondary btn-lg btn-block">Upload Movie</button>
+		      <button type="button" class="btn btn-secondary btn-lg btn-block" onclick="openForm()">Upload Movie</button>
 		      <a href="/"><button type="button" class="btn btn-secondary btn-lg btn-block">Log Out</button></a>
 		    </div>
 		  </div>
@@ -84,6 +223,15 @@
 		  </tbody>
 		</table>
 	</div>
+	<script>
+		function openForm() {
+		  document.getElementById("UploadPopup").style.display = "block";
+		}
+
+		function closeForm() {
+		  document.getElementById("UploadPopup").style.display = "none";
+		}
+	</script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
