Redirect for watchMovie and makePayment done

--- a/templates/user.html
+++ b/templates/user.html
@@ -130,7 +130,7 @@
  -->
 	<div id="paymentPopup" class="modal">
   
-  <form method="POST" class="modal-content animate" action="/payment/" >
+  <form method="POST" class="modal-content animate" action="{{url}}" >
     <div class="imgcontainer">
       <span onclick="document.getElementById('paymentPopup').style.display='none'" class="close" title="Close Modal">&times;</span>
     </div>
