--- a/templates/movie.html
+++ b/templates/movie.html
@@ -117,7 +117,7 @@
 
   <div id="RatingPopup" class="modal">
   
-  <form method="POST" class="modal-content animate" action="/Rating/" >
+  <form method="POST" class="modal-content animate" action="{{url}}" >
     <div class="imgcontainer">
       <span onclick="document.getElementById('RatingPopup').style.display='none'" class="close" title="Close Modal">&times;</span>
     
