Make and check payments queries done

--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -124,7 +124,7 @@
       <span onclick="document.getElementById('UploadPopup').style.display='none'" class="close" title="Close Modal">&times;</span>
      
     </div>
-
+    <!-- mydb, productionHouseID, name, IMDB, duration, genre -->
     <div class="container">
       <label for="name"><b>Movie name</b></label>
       <input type="text" placeholder="Enter the movie name" name="name" required>
@@ -132,13 +132,11 @@
       <label for="duration"><b>Duration</b></label>
       <input type="text" placeholder="Enter the duration" name="duration" required>
 
-
-
       <label for="genre"><b>Genre</b></label>
       <input type="text" placeholder="Enter the Genre" name="genre" required>
 
-         
-     
+      <label for="genre"><b>IMDB</b></label>
+      <input type="text" placeholder="Enter the IMDB Rating" name="imdb" required>
 
       <button type="submit" name="upload" value="Send" onclick="closeForm()">Upload
       </button>
