Movie Upload done

--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -119,7 +119,7 @@
 <body>
 <div id="UploadPopup" class="modal">
   
-  <form method="POST" class="modal-content animate" action="/upload/" >
+  <form method="POST" class="modal-content animate" action="{{url_upload}}" >
     <div class="imgcontainer">
       <span onclick="document.getElementById('UploadPopup').style.display='none'" class="close" title="Close Modal">&times;</span>
      
