merch for movie done

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -190,6 +190,8 @@
 		</div> -->
 		{{ artist_embed | safe }}
 		</div>
+		{{ merch_embed | safe }}
+		
 	</div>
 	<script>
 		function openForm() {
