merch for user, production house and artist done

--- a/templates/productionHouse.html
+++ b/templates/productionHouse.html
@@ -220,6 +220,7 @@
 		    {{ Upcoming_Movies_embed | safe }}
 		  </tbody>
 		</table>
+		{{ merch_embed | safe }}
 	</div>
 	<script>
 		function openForm() {
