--- a/templates/main.html
+++ b/templates/main.html
@@ -290,13 +290,16 @@
       <label for="uname"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="uname" required>
 
-      <label for="age"><b>Age</b></label>
+      <label for="age"><b>Age / Since </b></label>
       <input type="text" placeholder="Enter Age" name="age" required>
 
 
 
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
+
+      <label for="fam"><b>Want to be added to an existing Family?</b></label>
+      <input type="text" placeholder="Enter the FamilyID or Enter NO" name="fam" required>
 
       <label for="designation"><b>Sign up As</b></label>
       <input type="text" placeholder="e.g User/Artist/Production" name="designation" required>
