--- a/templates/main.html
+++ b/templates/main.html
@@ -535,12 +535,11 @@ function closeForm1() {
             <h4>Contact Us</h4>
             <p>
             
-             
-              <strong>Email:</strong> info@example.com<br>
-              <strong>Email:</strong> info@example.com<br>
-              <strong>Email:</strong> info@example.com<br>
-              <strong>Email:</strong> info@example.com<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Email: </strong> anikait18016@iiitd.ac.in<br>
+              <strong>Email: </strong> anshul18219@iiitd.ac.in<br>
+              <strong>Email: </strong> nandini18056@iiitd.ac.in<br>
+              <strong>Email: </strong> sanskar18411@iiitd.ac.in<br>
+              <strong>Email: </strong> utkarsh18114@iiitd.ac.in <br>
             </p>
 
             <div class="social-links">
